# triangular-pool

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
scripts/: changing-l-data.sh
src/: CMakeLists.txt  arguments.hpp  config.hpp  intersection.cpp  intersection.hpp  linear_equation.cpp  linear_equation.hpp  main.cpp  particle.cpp  particle.hpp  ray.cpp  ray.hpp  segment.cpp  segment.hpp  simulation.cpp  simulation.hpp  statistics.cpp  statistics.hpp  wall.cpp  wall.hpp
src/geometry/: CMakeLists.txt  angles.hpp  intersection.hpp  linear_equation.hpp
src/graphics/: CMakeLists.txt  font.cpp  font.hpp  graphics.cpp  graphics.hpp  particle.cpp  particle.hpp  point.cpp  point.hpp  simulation.cpp  simulation.hpp  statistics.cpp  statistics.hpp  wall.cpp  wall.hpp  window.cpp  window.hpp
src/libraries/glm/: vec2.hpp  vec3.hpp  vec4.hpp
src/math/: CMakeLists.txt  angles.cpp  angles.hpp  intersection.cpp  intersection.hpp  linear_equation.cpp  linear_equation.hpp  ray.cpp  ray.hpp  segment.cpp  segment.hpp  statistics.hpp  statistics.inl
src/util/: CMakeLists.txt  arguments.cpp  arguments.hpp  config.cpp  config.hpp  listeners.hpp  listeners.inl  unused.hpp
test/: CMakeLists.txt  linear_equation.test.cpp
test/math/: linear_equation.test.cpp  segment.test.cpp  statistics.test.cpp
